--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,6 @@ FetchContent_MakeAvailable(raylib)
 add_executable(pikuma_physics src/main.cpp
         src/vectors.cpp
         src/particles.cpp
-        src/particles.h)
+        src/particles.h
+        src/physic_constants.h)
 target_link_libraries(pikuma_physics PRIVATE raylib)
