basic collision resolution, naive implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(pikuma_physics src/main.c
         src/physics/particles.c
         src/physics/rigidbodies.c
         src/physics/forces.c
+        src/physics/collision.c
 
         src/scenes/particles_scene.c
         src/scenes/rigidbodies_scene.c
