cleaning up code and simplifying stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,19 +7,15 @@ include(FetchContent)
 FetchContent_Declare(
         raylib
         GIT_REPOSITORY https://github.com/raysan5/raylib.git
-        GIT_TAG 5.0
+        GIT_TAG 5.5
         GIT_PROGRESS TRUE
 )
-FetchContent_MakeAvailable(raylib)
 FetchContent_Declare(
         cglm
         GIT_REPOSITORY https://github.com/recp/cglm.git
-        GIT_TAG v0.9.4
+        GIT_TAG v0.9.6
 )
-if(NOT cglm_POPULATED) # Make CGLM available
-    FetchContent_Populate(cglm)
-    include_directories(${cglm_SOURCE_DIR}/include)
-endif ()
+FetchContent_MakeAvailable(raylib cglm)
 
 include_directories(src)
 
@@ -31,7 +27,5 @@ add_executable(pikuma_physics src/main.c
 
         src/scenes/particles_scene.c
         src/scenes/rigidbodies_scene.c
-
-        src/graphics/raylib_utils.c
 )
-target_link_libraries(pikuma_physics PRIVATE raylib)
+target_link_libraries(pikuma_physics PRIVATE raylib cglm)
