--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,7 @@ FetchContent_Declare(
         GIT_TAG 5.5
         GIT_PROGRESS TRUE
 )
-FetchContent_Declare(
-        cglm
-        GIT_REPOSITORY https://github.com/recp/cglm.git
-        GIT_TAG v0.9.6
-)
-FetchContent_MakeAvailable(raylib cglm)
+FetchContent_MakeAvailable(raylib)
 
 add_executable(pikuma_physics src/main.c
         src/physics/particles.c
@@ -26,4 +21,4 @@ add_executable(pikuma_physics src/main.c
         src/scenes/particles_scene.c
         src/scenes/rigidbodies_scene.c
 )
-target_link_libraries(pikuma_physics PRIVATE raylib cglm)
+target_link_libraries(pikuma_physics PRIVATE raylib)
